<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ips_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/ips_info"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nilai_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nilai_info"
            app:layout_constraintBottom_toTopOf="@+id/grid_oprator"
            app:layout_constraintEnd_toEndOf="@+id/grid_oprator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ips_info" />

        <GridLayout
            android:id="@+id/grid_oprator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:columnCount="3"
            android:padding="16dp"
            android:rowCount="4"
            android:useDefaultMargins="true"
            app:layout_constraintTop_toBottomOf="@+id/nilai_info">

            <!--            ini inputan mata kuliah 1-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mk_1_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1.8"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ips_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mk_1_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mk_1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sks_1_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ips_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sks_1_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sks_1"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nilai_1_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ips_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nilai_1_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nilai_1"
                    android:inputType="textCapCharacters"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            ini inputan mata kuliah 2-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mk_2_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mk_1_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mk_2_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mk_1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sks_2_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ips_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sks_2_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sks_1"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nilai_2_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mk_1_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nilai_2_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nilai_1"
                    android:inputType="textCapCharacters"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            ini inputan mata kuliah 3-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mk_3_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mk_1_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mk_3_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mk_1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sks_3_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ips_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sks_3_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sks_1"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nilai_3_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mk_1_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nilai_3_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nilai_1"
                    android:inputType="textCapCharacters"/>



            </com.google.android.material.textfield.TextInputLayout>

            <!--            ini inputan mata kuliah 4-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mk_4_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mk_1_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mk_4_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mk_1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sks_4_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ips_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sks_4_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sks_1"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nilai_4_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mk_1_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nilai_4_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nilai_1"
                    android:inputType="textCapCharacters"/>


            </com.google.android.material.textfield.TextInputLayout>

        </GridLayout>


        <Button
            android:id="@+id/hitung_ips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/hitung_button"
            app:layout_constraintEnd_toStartOf="@+id/bersih_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid_oprator" />

        <TextView
            android:id="@+id/hasil_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hasil_text"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hitung_ips" />


        <TextView
            android:id="@+id/hasil_sks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hasil_sks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hasil_ips" />

        <TextView
            android:id="@+id/hasil_ips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hasil_ips"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hasil_text" />

        <Button
            android:id="@+id/bersih_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/bersih_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hitung_ips"
            app:layout_constraintTop_toTopOf="@+id/hitung_ips" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>